--- a/css/reveal.css
+++ b/css/reveal.css
@@ -705,6 +705,60 @@ body {
 	        transform: translate3d(0, 300px, 0) rotateX(-70deg) translate3d(0, 300px, 0);
 }
 
+/*********************************************
+ * FLIP TRANSITION
+ *********************************************/
+.reveal .slides>section[data-transition=default].past,
+.reveal.flip .slides>section.past {
+	display: block;
+	opacity: 0;
+
+	-webkit-transform: rotateX(-90deg);
+	   -moz-transform: rotateX(-90deg);
+	    -ms-transform: rotateX(-90deg);
+	        transform: rotateX(-90deg);
+}
+.reveal .slides>section[data-transition=default].future,
+.reveal.flip .slides>section.future {
+	display: block;
+	opacity: 0;
+
+	-webkit-transform:rotateX(90deg);
+	   -moz-transform:rotateX(90deg);
+	    -ms-transform:rotateX(90deg);
+	        transform:rotateX(90deg);
+}
+
+.reveal .slides>section>section[data-transition=default].past,
+.reveal.flip .slides>section>section.past {
+	display: block;
+	opacity: 0;
+
+	-webkit-transform: rotateX(-90deg);
+	   -moz-transform: rotateX(-90deg);
+	    -ms-transform: rotateX(-90deg);
+	        transform: rotateX(-90deg);
+}
+.reveal .slides>section>section[data-transition=default].future,
+.reveal.flip .slides>section>section.future {
+	display: block;
+	opacity: 0;
+
+	-webkit-transform:rotateX(90deg);
+	   -moz-transform:rotateX(90deg);
+	    -ms-transform:rotateX(90deg);
+	        transform:rotateX(90deg);
+}
+
+/*
+.reveal.flip .slides>section.present {
+        background: rgb(0,0,0);
+}
+
+.reveal.flip .slides>section>section.present {
+        background: rgb(0,0,0);
+}
+  */
 
 /*********************************************
  * CONCAVE TRANSITION
